@@ -1,3 +1,6 @@
+  22 Sep 2012; Manuel Rueger (mrueg) gentoo@rueg.eu albino-1.3.3.ebuild:
+  dev-ruby/albino: Fix test
+
   16 Sep 2012; Manuel Rüger (mrueg) gentoo@rueg.eu albino-1.3.3.ebuild:
   dev-ruby/albino: Fix dependencies
 
